--- a/src/android/res/drawable/unread_message_badge.xml
+++ b/src/android/res/drawable/unread_message_badge.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp"/>
-    <solid android:color="#3e4666"/>
+    <solid android:color="#FF8A00"/>
 </shape>
