--- a/src/android/res/layout/content_video.xml
+++ b/src/android/res/layout/content_video.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:id="@+id/video_container"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:keepScreenOn="true"
-             tools:showIn="@layout/activity_video">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/video_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:keepScreenOn="true"
+    tools:showIn="@layout/activity_video">
 
-    <com.twilio.video.VideoView
-        android:id="@+id/thumbnail_video_view"
-        app:tviOverlaySurface="true"
-        app:tviMirror="true"
-        android:visibility="gone"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="bottom|start"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_thumbnail_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_start_end_margin"
+        android:layout_marginBottom="@dimen/fab_top_bottom_margin"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp">
+
+        <com.twilio.video.VideoView
+            android:id="@+id/thumbnail_video_view"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:visibility="gone"
+            app:tviMirror="true"
+            app:tviOverlaySurface="true" />
+
+    </androidx.cardview.widget.CardView>
 
     <com.twilio.video.VideoView
         android:id="@+id/primary_video_view"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </FrameLayout>
