--- a/src/android/res/values/dimens.xml
+++ b/src/android/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_start_end_margin">25dp</dimen>
+    <dimen name="fab_top_bottom_margin">18dp</dimen>
+    <dimen name="fab_between_margin">4dp</dimen>
 </resources>
