hide dynamic header code for while apply needed changes from front side

--- a/src/android/res/layout/activity_video.xml
+++ b/src/android/res/layout/activity_video.xml
@@ -15,6 +15,7 @@
         android:paddingStart="30dp"
         android:paddingTop="15dp"
         android:paddingEnd="25dp"
+        android:visibility="gone"
         android:paddingBottom="15dp">
         
 
