--- a/src/android/res/layout/activity_video.xml
+++ b/src/android/res/layout/activity_video.xml
@@ -108,7 +108,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/chat"
-                app:backgroundTint="#40F5F6FD" />
+                android:tint="#ffffff"
+                app:backgroundTint="#8118D9" />
 
             <TextView
                 android:id="@+id/txt_unread_message"
@@ -142,7 +143,8 @@
             android:layout_marginStart="@dimen/fab_start_end_margin"
             android:layout_marginTop="@dimen/fab_top_bottom_margin"
             android:src="@drawable/ic_videocam_green_24px"
-            app:backgroundTint="#40F5F6FD" />
+            android:tint="#ffffff"
+            app:backgroundTint="#8118D9" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/switch_camera_action_fab"
@@ -152,7 +154,8 @@
             android:layout_marginTop="@dimen/fab_top_bottom_margin"
             android:layout_toEndOf="@+id/local_video_action_fab"
             android:src="@drawable/ic_switch_camera_512dp"
-            app:backgroundTint="#40F5F6FD" />
+            android:tint="#ffffff"
+            app:backgroundTint="#8118D9" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/attachment_fab"
@@ -162,7 +165,8 @@
             android:layout_marginTop="@dimen/fab_top_bottom_margin"
             android:layout_marginEnd="@dimen/fab_start_end_margin"
             android:src="@drawable/attach"
-            app:backgroundTint="#40F5F6FD" />
+            android:tint="#ffffff"
+            app:backgroundTint="#8118D9" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/mute_action_fab"
@@ -172,7 +176,8 @@
             android:layout_marginEnd="@dimen/fab_between_margin"
             android:layout_toStartOf="@id/attachment_fab"
             android:src="@drawable/ic_mic_green_24px"
-            app:backgroundTint="#40F5F6FD" />
+            android:tint="#ffffff"
+            app:backgroundTint="#8118D9" />
 
     </RelativeLayout>
 
